--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /build/
 src/main/resources/docs/
 # Any other files that should not be committed
-/data/
+/data
 *.jar
 # MacOS custom attributes files created by Finder
 .DS_Store
