--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,6 @@
 # basic options
-title: Title
-author: Ming En
-email: KOHM0025@e.ntu.edu.sg
-description: user guide for Calorie Tracker
-github_username: MingEn82
+title: LifeTracker
+description: Get your desired body shape with this application!
 
 # Build settings
 markdown: kramdown
