--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,1 @@
-remote_theme: chrisrhymes/bulma-clean-theme
-
-header_pages: 
-  - AboutUs.md
-  - UserGuide.md
-  - DeveloperGuide.md
+theme: minima
